I fixed the alignment of the TOC's header so that it would align with the hide/show button.

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -465,10 +465,10 @@ ul#filetoc {
 	list-style: none;
 }
 #mw-content .toc h2 {
-	font-size: 1.2em;
+	font-size: 1em;
 	font-family: @fonts;
 	margin: 0;
-	display: inline-block;
+	display: inline;
 	border-bottom-color: @grey;
 }
 .toctoggle {
